# second-brain

./: README.md  copy_and_rename_service.sh  docker-compose.yml
services/current-actions/: CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
services/current-actions/.devcontainer/: devcontainer.json
services/current-actions/configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
services/current-actions/docs/yaml/: api.yaml  definitions.yaml  internal.yaml
services/current-actions/docs/yaml/api/: definitions.yaml
services/current-actions/docs/yaml/clients/sometime_later/: api.yaml  definitions.yaml
services/current-actions/postgresql/current_actions/: migrations.txt
services/current-actions/postgresql/current_actions/migrations/: V01__create_db.sql
services/current-actions/postgresql/schemas/: current_actions.sql
services/current-actions/src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
services/current-actions/src/clients/contract/: base_client.hpp
services/current-actions/src/clients/contract/models/: exceptions.hpp
services/current-actions/src/clients/contract/sometime_later/: client.hpp
services/current-actions/src/clients/sometime_later/: client.cpp  client.hpp
services/current-actions/src/current_actions/contract/managers/: tasks_manager.hpp
services/current-actions/src/current_actions/contract/models/: exceptions.hpp
services/current-actions/src/current_actions/database/sql/: insert_task.sql  mark_task_as_active.sql  mark_task_as_completed.sql  mark_task_as_deleted.sql  mark_task_as_moved_to_sometime_later.sql  select_task_by_id.sql  select_tasks.sql  select_user_id_by_task_id.sql  update_name_or_description.sql  upsert_task.sql
services/current-actions/src/current_actions/managers/: tasks_manager.cpp
services/current-actions/src/current_actions/models/: task.hpp  tasks_provider_structures.cpp  tasks_provider_structures.hpp
services/current-actions/src/current_actions/providers/tasks_provider/: tasks_provider.cpp  tasks_provider.hpp
services/current-actions/src/views/contract/: base_handler.hpp
services/current-actions/src/views/contract/models/: responses.hpp
services/current-actions/src/views/current-actions/v1/task/: view.cpp  view.hpp
services/current-actions/src/views/models/: responses.cpp
services/current-actions/tests/: conftest.py
services/current-actions/tests/test_current_actions/: test_basic.py  test_complete_task.py  test_create_task.py  test_list_tasks.py  test_move_task.py  test_reactivate_task.py  test_remove_task.py  test_sometime_later_task.py  test_update_task.py
services/current-actions/tests/test_current_actions/plugins/: utils.py
services/current-actions/tests/test_current_actions/static/test_complete_task/: database.sql
services/current-actions/tests/test_current_actions/static/test_complete_task/testcases/: happy_path.json  task_id_not_found.json  (+2 more)
services/current-actions/tests/test_current_actions/static/test_list_tasks/: database.sql
services/current-actions/tests/test_current_actions/static/test_move_task/: database.sql
services/current-actions/tests/test_current_actions/static/test_reactivate_task/: database.sql
services/current-actions/tests/test_current_actions/static/test_sometime_later_task/: database_active_task.sql  database_inactive_task.sql  database_moved_to_sometime_later_task.sql
services/sometime-later/: CMakeLists.txt  Dockerfile  Makefile  README.md
services/sometime-later/.devcontainer/: devcontainer.json
services/sometime-later/configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
services/sometime-later/docs/yaml/: api.yaml  definitions.yaml
services/sometime-later/docs/yaml/api/: internal.yaml
services/sometime-later/docs/yaml/clients/current_actions/: api.yaml  definitions.yaml
services/sometime-later/postgresql/schemas/: sometime_later.sql
services/sometime-later/src/: main.cpp
services/sometime-later/src/clients/contract/: base_client.hpp
services/sometime-later/src/clients/contract/current_actions/: client.hpp
services/sometime-later/src/clients/contract/models/: exceptions.hpp
services/sometime-later/src/clients/current_actions/: client.cpp  client.hpp
services/sometime-later/src/sometime_later/contract/managers/: tasks_manager.hpp
services/sometime-later/src/sometime_later/contract/models/: exceptions.hpp  tasks_provider_structures.hpp
services/sometime-later/src/sometime_later/database/sql/: insert_task.sql  mark_task_as_completed.sql  mark_task_as_deleted.sql  mark_task_as_moved_to_current_actions.sql  mark_task_as_pending.sql  select_task_by_id.sql  select_tasks.sql  select_user_id_by_task_id.sql  update_name_or_description.sql  upsert_task.sql
services/sometime-later/src/sometime_later/managers/: tasks_manager.cpp
services/sometime-later/src/sometime_later/models/: tasks_provider_structures.cpp  tasks_provider_structures.hpp
services/sometime-later/src/sometime_later/providers/tasks_provider/: tasks_provider.cpp  tasks_provider.hpp
services/sometime-later/src/views/contract/models/: responses.hpp
services/sometime-later/tests/: conftest.py
services/sometime-later/tests/test_sometime_later/: test_complete_task.py  test_create_task.py  test_current_actions_task.py  test_list_tasks.py  test_move_task.py  test_pend_task.py  test_remove_task.py  test_update_task.py
services/sometime-later/tests/test_sometime_later/plugins/: mocks.py  utils.py
services/sometime-later/tests/test_sometime_later/static/test_current_actions_task/: database_moved_to_current_actions_task.sql  database_not_pending_task.sql  database_pending_task.sql
services/sometime-later/tests/test_sometime_later/static/test_list_tasks/: database.sql
services/sometime-later/tests/test_sometime_later/static/test_move_task/: database.sql
services/sometime-later/tests/test_sometime_later/static/test_pend_task/: database.sql
services/sometime-later/tests/test_sometime_later/static/test_remove_task/: database.sql
(+371 files in other folders)
